--- a/censor-master/manifest.json
+++ b/censor-master/manifest.json
@@ -14,6 +14,8 @@
             "http://news.google.com/*"
           ],
 
+          "run_at": "document_end",
+
           "js": ["content.js"]
         }
       ]
